welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: ';' expected but 'false' found.
    returne false
            ^