welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var couleurSol=false
  if (estFaceMur()){
    returne false
  }
  if (  getCouleurSol()==Color.green){
    couleurSol=true
  }
  return couleurSol
  
}
